--- a/app/views/partials/addpoi.hbs
+++ b/app/views/partials/addpoi.hbs
@@ -3,22 +3,17 @@
     <div class="uk-grid uk-grid-stack">
       <div class="uk-width-1-2@m">
         <div class="uk-margin">
-          <label class="uk-form-label" for="form-stacked-text"></label>
+          <label class="uk-form-label" for="form-stacked-text">Add New POI</label>
           <div class="uk-form-controls">
-            <input class="uk-input" id="form-stacked-text" type="number" name="amount" placeholder="Euros" />
-          </div>
-        </div>
-        <div class="uk-margin">
-          <div class="uk-form-label">Payment</div>
-          <div class="uk-form-controls">
-            <label><input class="uk-radio" type="radio" name="method" value="paypal" /> Paypal </label><br />
-            <label><input class="uk-radio" type="radio" name="method" value="direct" /> Cash </label>
+            <input class="uk-input" id="form-stacked-text" type="string" name="name" placeholder="Name" />
+            <br>
+            <input class="uk-input" id="form-stacked-text" type="string" name="description" placeholder="Description" />
           </div>
         </div>
       </div>
       <div class=" uk-width-1-2@m">
         <div class="uk-margin">
-          <button class="submit uk-button uk-button-primary uk-button-large uk-width-1-1">Donate</button>
+          <button class="submit uk-button uk-button-primary uk-button-large uk-width-1-1">Add POI</button>
         </div>
       </div>
     </div>
