--- a/assignment1-island-poi-webapp/app/views/partials/addpoi.hbs
+++ b/assignment1-island-poi-webapp/app/views/partials/addpoi.hbs
@@ -1,24 +1,24 @@
 <div class="uk-margin uk-width-2xlarge uk-margin-auto uk-card uk-card-default uk-card-body uk-box-shadow-large">
   <form class="uk-form-stacked uk-text-left" action="/addPOI" method="POST">
     <div class="uk-grid uk-grid-stack">
-      <div class="uk-width-1-2@m">
+      <div class="uk-width-1-1">
         <div class="uk-margin">
-          <label class="uk-form-label" for="form-stacked-text"></label>
-          <div class="uk-form-controls">
-            <input class="uk-input" id="form-stacked-text" type="number" name="amount" placeholder="Euros" />
+          <label class="uk-form-label" for="form-stacked-text">Add New POI</label>
+          <div class="uk-inline uk-width-1-1">
+              <span class="uk-form-icon" uk-icon="icon: empty"></span>
+              <input class="uk-input uk-form-large" type="text" name="name" placeholder="Name">
           </div>
-        </div>
-        <div class="uk-margin">
-          <div class="uk-form-label">Payment</div>
-          <div class="uk-form-controls">
-            <label><input class="uk-radio" type="radio" name="method" value="paypal" /> Paypal </label><br />
-            <label><input class="uk-radio" type="radio" name="method" value="direct" /> Cash </label>
+          <div class="uk-inline uk-width-1-1">
+              <span class="uk-form-icon" uk-icon="icon: empty"></span>
+              <input class="uk-input uk-form-large" type="text" name="description" placeholder="Description">
           </div>
-        </div>
-      </div>
-      <div class=" uk-width-1-2@m">
-        <div class="uk-margin">
-          <button class="submit uk-button uk-button-primary uk-button-large uk-width-1-1">Donate</button>
+          <div class="uk-inline uk-width-1-1">
+              <span class="uk-form-icon" uk-icon="icon: empty"></span>
+              <input class="uk-input uk-form-large" type="text" name="category" placeholder="Category">
+          </div>
+          <div class="uk-inline uk-width-1-1">
+              <button class="submit uk-button uk-button-primary uk-button-large uk-width-1-1">Add POI</button>
+          </div>
         </div>
       </div>
     </div>
