created showPOIs partial so that separate partials can be used for Home view and Report View so Report View displays basic analytics editted home command in pois controller to accomodate this

--- a/assignment1-island-poi-webapp/app/views/partials/showPOIs.hbs
+++ b/assignment1-island-poi-webapp/app/views/partials/showPOIs.hbs
@@ -1,13 +1,12 @@
 <div class="uk-margin uk-width-2xlarge uk-margin-auto uk-card uk-card-default uk-card-body uk-box-shadow-large">
   <table class="uk-table">
     <caption>
-      POIs Added
+      The Islands of Ireland - Places of Interest
     </caption>
     <thead>
       <th>Name</th>
       <th>Description</th>
       <th>Category</th>
-      <th>Creator</th>
     </thead>
     <tbody class="uk-text-left">
       {{#each pois}}
@@ -15,7 +14,6 @@
           <td>{{name}}</td>
           <td>{{description}}</td>
           <td>{{category}}</td>
-          <td> {{creator.firstName}} {{creator.lastName}} </td>
         </tr>
       {{/each}}
     </tbody>
