--- a/assignment1-island-poi-webapp/app/views/home.hbs
+++ b/assignment1-island-poi-webapp/app/views/home.hbs
@@ -8,6 +8,6 @@
     <div class="uk-width-auto@m">
       <img width="500" src="images/skyireland.jpg" />
     </div>
-    <div class="uk-width-expand@m">{{> addpoi}}</div>
+    <div class="uk-width-expand@m">{{> poi-list}}</div>
   </div>
 </div>
