made mistake of rerouting addpoi and showpois so had to create new add view to allow addpoi to continue to function and reroute addpoi button from home to add view. can now add pois again

--- a/assignment1-island-poi-webapp/app/views/home.hbs
+++ b/assignment1-island-poi-webapp/app/views/home.hbs
@@ -8,6 +8,6 @@
     <div class="uk-width-auto@m">
       <img width="500" src="images/skyireland.jpg" />
     </div>
-    <div class="uk-width-expand@m">{{> poi-list}}</div>
+    <div class="uk-width-expand@m">{{> showPOIs}}</div>
   </div>
 </div>
