reworked addpoi to use radio buttons for categories so they will have definite types

--- a/assignment1-island-poi-webapp/app/views/partials/addpoi.hbs
+++ b/assignment1-island-poi-webapp/app/views/partials/addpoi.hbs
@@ -5,16 +5,19 @@
         <div class="uk-margin">
           <label class="uk-form-label" for="form-stacked-text">Add New POI</label>
           <div class="uk-inline uk-width-1-1">
-              <span class="uk-form-icon" uk-icon="icon: empty"></span>
-              <input class="uk-input uk-form-large" type="text" name="name" placeholder="Name">
+              <label class="uk-form-label" for="form-stacked-text">Name</label>
+              <input class="uk-input uk-form-small" type="text" name="name" placeholder="Name">
           </div>
           <div class="uk-inline uk-width-1-1">
-              <span class="uk-form-icon" uk-icon="icon: empty"></span>
-              <input class="uk-input uk-form-large" type="text" name="description" placeholder="Description">
+              <label class="uk-form-label" for="form-stacked-text">Description</label>
+              <input class="uk-input uk-form-small" type="text" name="description" placeholder="Description">
           </div>
           <div class="uk-inline uk-width-1-1">
-              <span class="uk-form-icon" uk-icon="icon: empty"></span>
-              <input class="uk-input uk-form-large" type="text" name="category" placeholder="Category">
+              <label class="uk-form-label" for="form-stacked-text">Category</label>
+              <label><input class="uk-radio" type="radio" name="category" value="Natural Wonder"> North </label>
+              <label><input class="uk-radio" type="radio" name="category" value="Monument"> South </label>
+              <label><input class="uk-radio" type="radio" name="category" value="Natural Wonder"> East </label>
+              <label><input class="uk-radio" type="radio" name="category" value="Monument"> West </label>
           </div>
           <div class="uk-inline uk-width-1-1">
               <button class="submit uk-button uk-button-primary uk-button-large uk-width-1-1">Add POI</button>
