--- a/assignment1-island-poi-webapp/app/views/partials/main-menu.hbs
+++ b/assignment1-island-poi-webapp/app/views/partials/main-menu.hbs
@@ -1,4 +1,7 @@
 <ul class="uk-iconnav uk-margin-left">
+  <a href="/home" class="uk-card uk-card-small uk-card-hover uk-padding-small">
+      <i class="fas fa-home fa-3x" style="color:rgb(246,255,0)" title="Home" pos="bottom" uk-tooltip></i>
+  </a>
   <a href="/add" class="uk-card uk-card-small uk-card-hover uk-padding-small">
       <i class="fas fa-location-arrow fa-3x" style="color:rgb(72,215,9)" title="Add POI" pos="bottom" uk-tooltip></i>
   </a>
