--- a/assignment1-island-poi-webapp/app/views/home.hbs
+++ b/assignment1-island-poi-webapp/app/views/home.hbs
@@ -4,10 +4,7 @@
 </div>
 
 <div class="uk-container uk-margin">
-  <div class="uk-child-width-expand uk-flex-center uk-flex-middle uk-text-center" uk-grid>
-    <div class="uk-width-auto@m">
-      <img width="500" src="images/skyireland.jpg" />
-    </div>
-    <div class="uk-width-expand@m">{{> showPOIs}}</div>
+  <div class="uk-width-expand uk-flex-left uk-flex-left uk-text-left">
+    {{> showPOIs}}
   </div>
 </div>
