--- a/assignment1-island-poi-webapp/app/views/partials/addpoi.hbs
+++ b/assignment1-island-poi-webapp/app/views/partials/addpoi.hbs
@@ -13,6 +13,12 @@
               <input class="uk-input uk-form-small" type="text" name="description" placeholder="Description">
           </div>
           <div class="uk-inline uk-width-1-1">
+              <label class="uk-form-label" for="form-stacked-text">Picture</label>
+              <form action='/api/images' method="post" enctype="multipart/form-data">
+                  <input type="file" class="uk-input" name="imagefile" accept="image/png, image/jpeg">
+              </form>
+          </div>
+          <div class="uk-inline uk-width-1-1">
               <label class="uk-form-label" for="form-stacked-text">Category</label>
               <label><input class="uk-radio" type="radio" name="category" value="Natural Wonder"> North </label>
               <label><input class="uk-radio" type="radio" name="category" value="Monument"> South </label>
