--- a/assignment1-island-poi-webapp/app/views/partials/addpoi.hbs
+++ b/assignment1-island-poi-webapp/app/views/partials/addpoi.hbs
@@ -20,10 +20,10 @@
           </div>
           <div class="uk-inline uk-width-1-1">
               <label class="uk-form-label" for="form-stacked-text">Category</label>
-              <label><input class="uk-radio" type="radio" name="category" value="Natural Wonder"> North </label>
-              <label><input class="uk-radio" type="radio" name="category" value="Monument"> South </label>
-              <label><input class="uk-radio" type="radio" name="category" value="Natural Wonder"> East </label>
-              <label><input class="uk-radio" type="radio" name="category" value="Monument"> West </label>
+              <label><input class="uk-radio" type="radio" name="category" value="North"> North </label>
+              <label><input class="uk-radio" type="radio" name="category" value="South"> South </label>
+              <label><input class="uk-radio" type="radio" name="category" value="East"> East </label>
+              <label><input class="uk-radio" type="radio" name="category" value="West"> West </label>
           </div>
           <div class="uk-inline uk-width-1-1">
               <button class="submit uk-button uk-button-primary uk-button-large uk-width-1-1">Add POI</button>
