--- a/assignment1-island-poi-webapp/app/views/editPOI.hbs
+++ b/assignment1-island-poi-webapp/app/views/editPOI.hbs
@@ -10,7 +10,7 @@
         </div>
         <div class="uk-width-expand@m">
             <div class="uk-card uk-card-default uk-width-xlarge uk-card-body uk-box-shadow-large">
-                <h3 class="uk-card-title uk-text-center">Update the Island: </h3>
+                <h3 class="uk-card-title uk-text-center">Update Island Information: </h3>
                 {{> poiEdit}}
             </div>
         </div>
