followed Gallery Repo to create new controllers and views to allow users to view a gallery of images and upload new images also added controls for deleting images but this function does not work yet

--- a/assignment1-island-poi-webapp/app/views/partials/main-menu.hbs
+++ b/assignment1-island-poi-webapp/app/views/partials/main-menu.hbs
@@ -2,6 +2,9 @@
   <a href="/add" class="uk-card uk-card-small uk-card-hover uk-padding-small">
       <i class="fas fa-location-arrow fa-3x" style="color:rgb(72,215,9)" title="Add POI" pos="bottom" uk-tooltip></i>
   </a>
+  <a href="/image-gallery" class="uk-card uk-card-small uk-card-hover uk-padding-small">
+      <i class="fas fa-images fa-3x" style="color:rgb(9,255,218)" title="Image Gallery" pos="bottom" uk-tooltip></i>
+  </a>
   <a href="/report" class="uk-card uk-card-small uk-card-hover uk-padding-small">
     <i class="fas fa-th-list fa-3x" style="color:rgb(63, 122, 139)" title="Report" pos="bottom" uk-tooltip></i>
   </a>
