--- a/assignment1-island-poi-webapp/app/views/partials/poi-list.hbs
+++ b/assignment1-island-poi-webapp/app/views/partials/poi-list.hbs
@@ -20,12 +20,12 @@
           <td> {{creator.firstName}} {{creator.lastName}} </td>
           <td>
               <a href="/showEditPOI/{{_id}}" class="uk-card uk-card-small uk-card-hover uk-padding-small">
-                 <i class="fas fa-edit fa-3x" style="color:rgb(14, 168, 160)" title="Edit POI {{_id}}" pos="bottom" uk-tooltip></i>
+                 <i class="fas fa-edit fa-3x" style="color:rgb(238,165,19)" title="Edit POI {{_id}}" pos="bottom" uk-tooltip></i>
               </a>
           </td>
           <td>
               <a href="/deletePOI/{{_id}}" class="uk-card uk-card-small uk-card-hover uk-padding-small">
-                  <i class="fas fa-trash fa-3x" style="color:rgb(14, 168, 160)" title="Delete" pos="bottom" uk-tooltip></i>
+                  <i class="fas fa-trash fa-3x" style="color:rgb(248,0,0)" title="Delete" pos="bottom" uk-tooltip></i>
               </a>
           </td>
         </tr>
