--- a/assignment1-island-poi-webapp/app/views/partials/addpoi.hbs
+++ b/assignment1-island-poi-webapp/app/views/partials/addpoi.hbs
@@ -12,6 +12,16 @@
               <label class="uk-form-label" for="form-stacked-text">Description</label>
               <input class="uk-input uk-form-small" type="text" name="description" placeholder="Description">
           </div>
+          <div class="uk-margin uk-width-1-1">
+                <label class="uk-form-label" for="form-stacked-text">Category</label>
+                <div class="uk-form-controls ">
+                    {{#each categories }}
+                        <label> <input class="uk-radio" type="radio" name="category" value="{{category}}">
+                            {{category}}
+                        </label> <br>
+                    {{/each}}
+                </div>
+            </div>
           <div class="uk-inline uk-width-1-1">
               <button class="submit uk-button uk-button-primary uk-button-large uk-width-1-1">Add POI</button>
           </div>
