--- a/assignment1-island-poi-webapp/app/views/partials/title-card.hbs
+++ b/assignment1-island-poi-webapp/app/views/partials/title-card.hbs
@@ -14,7 +14,7 @@
     <div class="uk-card uk-card-small uk-text-center uk-padding-remove">
       <a target="_blank" href="https://github.com/CianFD/EntWebDevIslandsPOIWebApp">
         <div>
-          <i class="fas fa-donate fa-3x" style="color:rgb(95, 96, 173)" title="Git Repo" pos="bottom" uk-tooltip></i>
+          <i class="fab fa-github fa-3x" style="color:rgb(95, 96, 173)" title="Git Repo" pos="bottom" uk-tooltip></i>
         </div>
         <div class="uk-width-expand@m uk-text-left">
           <div class="uk-text-muted uk-text-center" style="font-size:xx-small">Assignment1</div>
