--- a/assignment1-island-poi-webapp/app/views/partials/welcome-menu.hbs
+++ b/assignment1-island-poi-webapp/app/views/partials/welcome-menu.hbs
@@ -5,4 +5,10 @@
   <a href="/login" class="uk-card-hover uk-padding-small">
     <i class="fas fa-user-edit fa-3x" style="color:green" title="Log in" pos="bottom" uk-tooltip></i>
   </a>
+  <a href="/showAdminSignup" class="uk-card-hover uk-padding-small">
+      <i class="fas fa-user-cog fa-3x" style="color:rgb(120,63,160)" title="Administrator Sign up" pos="bottom" uk-tooltip></i>
+  </a>
+  <a href="/showAdminLogin" class="uk-card-hover uk-padding-small">
+      <i class="fas fa-user-edit fa-3x" style="color:#800033" title="Administrator Log in" pos="bottom" uk-tooltip></i>
+  </a>
 </ul>
