--- a/assignment1-island-poi-webapp/app/views/partials/title-card.hbs
+++ b/assignment1-island-poi-webapp/app/views/partials/title-card.hbs
@@ -17,7 +17,7 @@
           <i class="fab fa-github fa-3x" style="color:rgb(95, 96, 173)" title="Git Repo" pos="bottom" uk-tooltip></i>
         </div>
         <div class="uk-width-expand@m uk-text-left">
-          <div class="uk-text-muted uk-text-center" style="font-size:xx-small">Assignment1</div>
+          <div class="uk-text-muted uk-text-center" style="font-size:xx-small">EntAssignment1</div>
         </div>
       </a>
     </div>
